--- a/FaultyCalculator/index.html
+++ b/FaultyCalculator/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="script.js"></script>
+    <header>
+        <div class="box">
+            <input class="place" type="text">
+        </div>
+    </header>
+    <div class="section">
+        <div class="grid">
+            <button class="keys function">C</button>
+            <button class="keys function">()</button>
+            <button class="keys function">%</button>
+            <button class="keys operator">/</button>
+            <button class="keys">7</button>
+            <button class="keys">8</button>
+            <button class="keys">9</button>
+            <button class="keys operator">*</button>
+            <button class="keys">4</button>
+            <button class="keys">5</button>
+            <button class="keys">6</button>
+            <button class="keys operator">-</button>
+            <button class="keys">1</button>
+            <button class="keys">2</button>
+            <button class="keys">3</button>
+            <button class="keys operator">+</button>
+            <button class="keys">(-)</button>
+            <button class="keys">0</button>
+            <button class="keys">.</button>
+            <button class="keys equals">=</button>
+        </div>
+    </div>
 </body>
 </html>
