Youtube playlist layout using JS

--- a/YoutubePlaylistdemo.html
+++ b/YoutubePlaylistdemo.html
@@ -7,16 +7,9 @@
     <link rel="stylesheet" href="YoutubePlaylistdemo.css">
 </head>
 <body>
-    <div class="card">
-        <div>
-        <img src="https://i.ytimg.com/vi/9He4UBLyk8Y/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLBeKa7KTF79-m1iOJQSw1YJVKIoxQ" alt="">
-        <div class="timestamp">34:22</div>
-        </div>
-        <div class="text">
-            <h1>Front End Developer Roadmap 2024</h1>
-            <p>freeCodeCamp.org•736K views•8 months ago</p>
-        </div>
-    </div>
+    <div class="container">
+   
+</div>
     <script src="YoutubePlaylistdemo.js"></script>
 </body>
 </html>
