JS functionalities added

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -15,7 +15,7 @@
     <div class="section">
         <div class="grid">
             <button class="keys function">C</button>
-            <button class="keys function">()</button>
+            <button class="keys function">DEL</button>
             <button class="keys function">%</button>
             <button class="keys operator">/</button>
             <button class="keys">7</button>
@@ -37,5 +37,6 @@
         </div>
     </div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
